# cookipedia

./: db.sqlite3  pyproject.toml
config/: settings.py
food/: admin.py  models.py
food/migrations/: 0001_initial.py  0002_initial.py  0003_comment_comment_food.py
ingredient/: admin.py  models.py
ingredient/migrations/: 0001_initial.py
user/: models.py
user/migrations/: 0001_initial.py  0002_remove_user_address_delete_address.py
