[tool.poetry]
name = "cookipedia-backend"
version = "0.1.0"
description = ""
authors = ["Daina1007 <ekskeksk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cookipedia_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
